--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -105,6 +105,7 @@ Im Folgenden sind vor allem die möglichen Winkel der Gelenke in einer Ruheposit
 
 %-----------------------------------------------------
 \section{Von Groß und Klein}
+\label{bigAndSmall}
 
 Dieser Abschnitt widmet sich der Frage nach Unterschieden und Gemeinsamkeiten von großen und kleinen Wirbeltieren. Kann man Wirbeltiere und ihre Skelette einfach vergrößern und verkleinern? Oder sind sie besonders an ihre Größe angepasst? Unterscheidet sich das Skelett einer Maus wesentlich von dem eines Elefanten?
 
