--- a/latex/biology.tex
+++ b/latex/biology.tex
@@ -16,13 +16,14 @@ Dieses Kapitel soll einen Überblick über die biologische Beschaffenheit der Wi
 
 % Definition
 Wirbeltiere, oder auch Vertebrata, sind Tiere mit einer skelettartigen Schädelkapsel, einem Cranium. Deshalb werden sie auch Schädeltiere oder Craniota genannt.\\
-Auf den ersten Blick ist diese Definition etwas überraschend, da als  Haupteigenschaft nicht die Wirbelsäule, sondern der Schädel genannt wird. Das liegt daran, dass zu den Wirbeltieren auch einige Tiere gezählt werden, die gar keine Wirbelsäule sondern "`nur"' eine Chorda dorsalis besitzen. Die Chorda dorsalis ist das Achsenskelett der Chordatiere, einem Tierstamm, zu dem auch die Wirbeltiere gehören. (\cite{Vergleichende_Anatomie}, S.27)\\ %und Wikipedia zu Wirbeltieren und chorda dorsalis
+Auf den ersten Blick ist diese Definition etwas überraschend, da als  Haupteigenschaft nicht die Wirbelsäule, sondern der Schädel genannt wird. Das liegt daran, dass zu den Wirbeltieren auch einige Tiere gezählt werden, die gar keine Wirbelsäule sondern "`nur"' eine Chorda dorsalis besitzen. Die Chorda dorsalis ist das Achsenskelett der Chordatiere, einem Tierstamm, zu dem auch die Wirbeltiere gehören. (\cite{Vergleichende_Anatomie}, S.27) 
+\todo{etwas mehr Info zur chorda dorsalis}\\ %und Wikipedia zu Wirbeltieren und chorda dorsalis
 Hier in dieser Arbeit soll es aber nur um Wirbeltiere mit Wirbelsäule gehen.
 
 % 5 Klassen
-Es gibt fünf große Gruppen von Wirbeltieren. Die ersten bekannten Wirbeltiere sind die Fische. Aus ihnen entwickelten sich die Tetrapoden, Wirbeltiere mit vier Gliedmaßen, zu denen alle anderen Gruppen gehören. Zunächst entstanden die Amphibien, die noch nicht vollkommen terrestrisch leben. Daraus entwickelten sich die Reptilien, die erste Klasse der Wirbeltiere, die alle Strukturen besitzt um vollkommen an Land zu leben. (Es gibt aber auch Reptilien die trotzdem wieder im Wasser leben.) Außerdem gibt es noch die Klassen der Vögel und der Säugetiere.
+Es gibt fünf große Gruppen von Wirbeltieren. Die historisch ersten Wirbeltiere sind die Fische. Danach entwickelten sich die Tetrapoden, Wirbeltiere mit vier Gliedmaßen, zu denen alle anderen Gruppen gehören. Zunächst entstanden die Amphibien, die noch nicht vollkommen terrestrisch leben. Daraus entwickelten sich die Reptilien, die erste Klasse der Wirbeltiere, die alle Strukturen besitzt um vollkommen an Land zu leben. (Es gibt aber auch Reptilien die trotzdem wieder im Wasser leben.) Außerdem gibt es noch die Vögel, die sich auf das Fliegen spezialisiert haben, und die Säugetiere, die ihre Jungen säugen. (\cite{Vergleichende_Anatomie}, Kapitel 4)
 
-Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor allem in ihrem Skelett, sehr ähneln, lassen sich viele der im Folgenden aufgeführten Eigenschaften vermutlich leicht "`am eigenen Leib"' nachvollziehen.
+Auch der Mensch ist ein Säugetier und besitzt eine Wirbelsäule. Da sich Wirbeltiere, vor allem in ihrem Skelett, sehr ähneln, lassen sich viele der im folgenden Abschnitt aufgeführten Eigenschaften des Skeletts, vermutlich leicht "`am eigenen Leib"' nachvollziehen.
 
 
 %------------------------------------
@@ -37,26 +38,28 @@ Das weithin bekannteste Säugetier ist der Mensch. Da sich Wirbeltiere, vor alle
  \end{minipage}
 \end{center}
 
-Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch. Das bedeutet, dass ihre linke Körperseite symmetrisch zur rechten ist. 
+
+Wirbeltiere haben ein inneres Skelett und ihr Körper ist bilateralsymmetrisch (\cite{Vergleichende_Anatomie}, S.27). Das bedeutet, dass ihre linke Körperseite symmetrisch zur rechten ist. 
 
 % Wirbelsäule
 Die \emph{Wirbelsäule} ist je nach Lebensweise des entsprechenden Wirbeltiers aufgebaut. Ein wesentlicher Einflussfaktor auf Form und Aufbau sind die Kräfte, die auf sie wirken. 
 Bei Fischen muss die Wirbelsäule dem Druck der starken Axialmuskeln, die seitlich am Körper entlang führen, entgegenwirken.
 Bei Tetrapoden sind diese Axialmuskeln zurückgebildet, dafür muss die Wirbelsäule aber der Schwerkraft widerstehen.
-Bei Vögeln ist die Wirbelsäule noch einmal mehr spezialisiert, da sie an den Flug angepasst werden muss.
+Und bei Vögeln ist die Wirbelsäule speziell an den Flug angepasst und deshalb \ua besonders leicht. (\cite{Vergleichende_Anatomie}, Abschnitt 9.2, S.\ 168 ff.)
 
 % Wirbelanzahl
 Auch die Anzahl der Wirbel unterscheidet sich teilweise erheblich. 
-Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich $10$ bis maximal $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. (siehe auch \cite{Vergleichende_Anatomie}, Abschnitt 9.2, S.\ 168 ff.)
+Die Halswirbelsäule ist \zb bei den Fischen noch gar nicht herausgebildet. Amphibien haben einen Wirbel, der für die Beweglichkeit des Kopfes zuständig ist. Bei Reptilien ist die Halsregion meist schon stärker abgesetzt. Säugetiere haben, bis auf wenige Ausnahmen, genau $7$ Halswirbel, egal wie lang der Hals ist. Vögel haben die meisten Halswirbel, nämlich $10$ bis maximal $31$ beim Trauerschwan \cite{WikipediaVogelskelett}, meistens aber zwischen $15$ und $20$. (siehe auch \cite{Vergleichende_Anatomie}, Abschnitt 9.2)
 
-Ebenso unterscheidet sich die Anzahl der Wirbel auf anderen Teilen der Wirbelsäule. Teilweise sind Wirbel sogar miteinander zu einem größeren Knochen verwachsen. Betrachtet man nur die Gruppe der Säugetiere, so kommt man auf auf etwa $12$ bis $14$ Brustwirbel, $5$ bis $7$ Lendenwirbel, $3$ bis $5$ Kreuzwirbel und $4$ bis $22$ Schwanzwirbel \cite{AnatomieKuenstler}.
+Ebenso unterscheidet sich die Anzahl der Wirbel in anderen Teilen der Wirbelsäule. Teilweise sind Wirbel sogar miteinander zu einem größeren Knochen verwachsen. Betrachtet man nur die Gruppe der Säugetiere, so kommt man auf etwa $12$ bis $14$ Brustwirbel, $5$ bis $7$ Lendenwirbel, $3$ bis $5$ Kreuzwirbel und $4$ bis $22$ Schwanzwirbel \cite{AnatomieKuenstler}.
 
 % Wirbelform
-Auch die Form der einzelnen Wirbel unterscheidet sich sowohl zwischen den verschiedenen Tieren als auch entlang der Wirbelsäule einer einzelnen Art (\cite{Vergleichende_Anatomie}, Abschnitt 9.1 und Abbildung 9.2). Diese Vielfalt in ein Regelwerk zu zwängen, um sie automatisch generieren zu können, erscheint aussichtslos. Deshalb wird hier nicht weiter darauf eingegangen.
+Auch die Form der einzelnen Wirbel unterscheidet sich sowohl zwischen den verschiedenen Tieren als auch entlang der Wirbelsäule einer einzelnen Art (\cite{Vergleichende_Anatomie}, Abschnitt 9.1 und Abbildung 9.2). Diese Vielfalt in ein Regelwerk zu zwängen, um sie automatisch generieren zu können, erscheint aussichtslos. Deshalb wird hier mit einem Platzhaltern gearbeitet, der für alle Arten von Wirbeln steht.
 
 % Extremitäten
-Die \emph{Extremitäten} der Tetrapoden sind nach einem "`Grundbauplan"' aufgebaut (siehe Abbildung \ref{grundbauplan}). Dieser wird jedoch vielfach abgewandelt. Einige Beispiele sind in Abbildung \ref{bsp_extremitaeten} zu sehen. (\cite{AllgemeineZoologie}, S.\ 487)\\
-Bei Fischen haben die Extremitäten keine Verbindung zur Wirbelsäule. Erst Amphibien bilden hier eine Verbindung, da sie zur Fortbewegung an Land nötig ist. Dies wird im Folgenden, der Einfachheit halber, aber nicht weiter beachtet. (\cite{Vergleichende_Anatomie}, Abschnitt 9.2.3)
+Die \emph{Extremitäten} der Tetrapoden sind nach einem "`Grundbauplan"' aufgebaut (siehe Abbildung \ref{grundbauplan}). \todo{Fachbegriffe abschneiden, Bild einfärben} Dieser wird jedoch vielfach abgewandelt. Einige Beispiele sind in Abbildung \ref{bsp_extremitaeten} zu sehen. (\cite{AllgemeineZoologie}, S.\ 487)\\
+Bei Fischen haben die Extremitäten keine Verbindung zur Wirbelsäule. Erst Amphibien bilden Schulter- und Beckengürtel aus, da sie zur Fortbewegung an Land nötig sind. (\cite{Vergleichende_Anatomie}, Abschnitt 9.2.3)
+Der Einfachheit halber wird hier aber nicht weiter beachtet ob eine Verbindung zur Wirbelsäule besteht, oder nicht. 
 
 \begin{figure}
  \centering
@@ -73,25 +76,25 @@ Bei Fischen haben die Extremitäten keine Verbindung zur Wirbelsäule. Erst Amph
 \end{figure}
 
 % Extremitätengürtel
-Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können (siehe \cite{Vergleichende_Anatomie}, Absatz 9.7). Um das im Folgenden zu vereinfachen, wird der Schultergürtel durch ein Schulterblatt repräsentiert und der Beckengürtel durch einen "`Beckenknochen"', der allerdings eigentlich auch wieder aus mehreren Einzelknochen besteht.
+Schulter- und Beckengürtel bestehen  jeweils aus mehreren Knochen, die je nach Art mehr oder weniger ausgebildet, unterschiedlich geformt oder sogar komplett zurückgebildet sein können (siehe \cite{Vergleichende_Anatomie}, Absatz 9.7). Um das im Folgenden zu vereinfachen, wird jeder Extremitätengürtel durch einen Knochen repräsentiert. Der Schultergürtel wird durch ein Schulterblatt ersetzt und der Beckengürtel durch einen "`Beckenknochen"'.
 
 % verallgemeinerter und abstrahierter Bauplan
-Das Skelett von Wirbeltieren ist im Allgemeinen also ein kompliziertes Konstrukt aus vielen Einzelteilen, die auch zwischen verschiedenen Arten stark variieren. Um einen Algorithmus zu entwerfen, der solche Gebilde konstruiert, ist es also notwendig ein erheblich einfacheres Modell zu erstellen.\\ 
-In Abbildung \ref{bauplan_skelett} ist ein ein verallgemeinerter und abstrahierter Bauplan für Wirbeltiere zu sehen. Er ist reduziert auf die Wirbelsäule, Rippen, Schädel, Extremitäten, Hüft- und Schultergürtel. Die Extremitäten bestehen jeweils aus Oberarm/-schenkel, Unterarm/Schienbein und Hand/Fuß. Hände und Füße werden hier jeweils als ein "`Knochen"' betrachtet, obwohl sie natürlich aus vielen Einzelteilen bestehen. Es kann maximal zwei Extremitätenpaare geben, jeweils einer an jedem Extremitätengürtel. Rippen, Hals- und Schwanzwirbelsäule sind optional und auch die Anzahl der Wirbel und Rippen variiert je nach Tier.
+Das Skelett von Wirbeltieren ist im Allgemeinen also ein kompliziertes Konstrukt aus vielen Einzelteilen, die zwischen verschiedenen Arten stark variieren. Um einen Algorithmus zu entwerfen, der Skeletten nachempfundene Gebilde konstruiert, ist es also notwendig ein erheblich vereinfachtes Modell zu erstellen.\\ 
+In Abbildung \ref{bauplan_skelett} ist ein verallgemeinerter und abstrahierter Bauplan für Wirbeltiere zu sehen. Er ist reduziert auf die Wirbelsäule, Rippen, Schädel, Extremitäten, Hüft- und Schultergürtel. Die Extremitäten bestehen jeweils aus Oberarm/-schenkel, Unterarm/Schienbein und Hand/Fuß. Hände und Füße werden hier jeweils als ein "`Knochen"' betrachtet, obwohl sie natürlich aus vielen Einzelteilen bestehen. Es kann maximal zwei Extremitätenpaare geben, jeweils einer an jedem Extremitätengürtel. Rippen, Hals- und Schwanzwirbelsäule sind optional und auch die Anzahl der Wirbel und Rippen variiert je nach Tier.
 
 \begin{figure}
  \centering
  \includegraphics[width=\textwidth]{graphics/skeletonPlan}
- \caption{Verallgemeinerter und abstrahierter Bauplan eines Wirbeltierskeletts. Es sind zwei Extremitätenpaare erlaubt, jeweils einer an jedem Extremitätengürtel. Rippen und Hals- und Schwanzwirbelsäule sind optional. Die Anzahl der Wirbel und Rippen variiert je nach Tier.}
+ \caption{Verallgemeinerter und abstrahierter Bauplan eines Wirbeltierskeletts. Es sind maximal zwei Extremitätenpaare erlaubt, jeweils eines an jedem Extremitätengürtel. Rippen und Hals- und Schwanzwirbelsäule sind optional. Die Anzahl der Wirbel und Rippen variiert je nach Tier.}
  \label{bauplan_skelett}
 \end{figure}
 
 
 %Gelenke
-Auch bei \emph{Gelenken} gibt es viele verschiedene Ausprägungen (siehe \cite{Vergleichende_Anatomie}, Absatz 21.5.2). Der Einfachheit halber werden hier nur drei Arten von Gelenken betrachtet: unbewegliche Gelenke (\zb zwischen Wirbeln), Gelenke mit einem Freiheitsgrad (\zb an Ellenbogen oder Knie) und Gelenke mit zwei Freiheitsgraden (\zb an Schulter oder Hüfte).
+Auch bei \emph{Gelenken} gibt es viele verschiedene Ausprägungen (siehe \cite{Vergleichende_Anatomie}, Absatz 21.5.2). Der Einfachheit halber werden hier nur drei Arten von Gelenken betrachtet: unbewegliche Gelenke (\zb zwischen Wirbeln) \todo{ist eigentlich nicht unbeweglich}, Gelenke mit einem Freiheitsgrad (\zb an Ellenbogen oder Knie) und Gelenke mit zwei Freiheitsgraden (\zb an Schulter oder Hüfte).
 Im vereinfachten Modell sind alle Gelenke unbeweglich, bis auf diejenigen in Extremitäten. Außerdem wird angenommen, dass die jeweiligen Bewegungsradien für alle Wirbeltiere gleich sind. 
 
-Im Folgenden sind vor allem die möglichen Winkel der Gelenke in einer Ruheposition des Skeletts von Interesse. Diese sind in Abbildung \ref{joints} visualisiert. Schulter- und Hüftgelenk können eigentlich auch von der Körperachse wegbewegt werden. Diese Bewegungsrichtung wurde dann aber nicht verwendet. Deshalb ist sie hier nicht dargestellt.
+Im Folgenden sind vor allem die möglichen Winkel der Gelenke in einer Ruheposition des Skeletts von Interesse. Diese sind in Abbildung \ref{joints} visualisiert. \todo{Abb überarbeiten + evtl farbig wie Grundbauplan} Schulter- und Hüftgelenk können eigentlich auch von der Körperachse wegbewegt werden. Diese Bewegungsrichtung wird aber nicht verwendet. Deshalb ist sie hier nicht dargestellt.
 
 \begin{figure}
   \subfloat{\includegraphics[width=0.5\textwidth]{graphics/oneDimJoints}}
@@ -114,11 +117,10 @@ Zunächst ein kurzer Überblick über die Dimensionen, in denen man sich hier be
 Das größte und schwerste Wirbeltier ist der Blauwal, er kann bis zu $120$ Tonnen wiegen (siehe \ref{appendix_pca_weight}). Das aktuell kleinste bekannte Wirbeltier, mit einer Länge von $7$ bis $8$mm, ist der Frosch \emph{Paedophryne amauensis} \cite{smallestVertebrate}. Größe und Gewicht von Wirbeltieren kann also erheblich variieren.
 
 % Probleme bei Skalierung
-Wenn ein Tier, oder eine ganze Stammeslinie, wächst, so ändert sich die Größe gleichmäßig. Dieses Wachstum ist aber begrenzt. Der Grund dafür ist, dass die Oberfläche nicht proportional mit dem Volumen mitwächst. Beispielsweise produziert ein Säugetier Wärme proportional zu seinem Volumen. Es kann aber nur Wärme proportional zu seiner Oberfläche abgeben. Dadurch haben große Säugetiere eher Probleme damit Wärme abzugeben und kleine damit warm zu bleiben. \\
-Ein ähnliches Problem tritt bei Knochen auf. Die Last, die ein Knochen tragen kann, ist ungefähr proportional zu seiner Querschnittsfläche. Das Skelett muss aber die komplette Masse des Körpers tragen.
-
+Wenn eine Tierart im Laufe der Evolution wächst, so ändert sich die Größe gleichmäßig. Dieses Wachstum ist aber begrenzt. Der Grund dafür ist, dass die Oberfläche nicht proportional mit dem Volumen mitwächst. Beispielsweise produziert ein Säugetier Wärme proportional zu seinem Volumen. Es kann aber nur Wärme proportional zu seiner Oberfläche abgeben. Dadurch haben große Säugetiere eher Probleme Wärme abzugeben und kleine warm zu bleiben.
+Ein ähnliches Problem tritt bei Knochen auf. Die Last, die ein Knochen tragen kann, ist ungefähr proportional zu seiner Querschnittsfläche. Das Skelett muss aber das komplette Gewicht des Körpers tragen, was wiederum proportional zum Volumen ist.
 % Lösungen für Skalierungen
-Aus diesem Grund ist die Oberfläche sehr großer Tiere oft überproportional vergrößert. Bei Knochenquerschnitten ist das jedoch nicht unbedingt der Fall. Das Problem an dicken Knochen ist, dass sie den Bewegungsradius, \zb der Extremitäten, stark einschränken. Deshalb passen viele Tiere stattdessen ihre Körperhaltung und Aktivität an, um Spitzenkräfte, wie Stöße oder Oszillationen, zu vermeiden.\\ (\cite{Vergleichende_Anatomie}, Kapitel 23)
+Aus diesem Grund ist die Oberfläche sehr großer Tiere oft überproportional vergrößert. \todo{Bsp: Falten, große Ohren} Bei Knochenquerschnitten ist das jedoch nicht unbedingt der Fall. Das Problem an dicken Knochen ist, dass sie den Bewegungsradius, \zb der Extremitäten, stark einschränken. Deshalb passen viele Tiere stattdessen ihre Körperhaltung und Aktivität an, um Spitzenkräfte, wie Stöße oder Oszillationen, auf ihre Knochen zu vermeiden. Deshalb wirken große Tiere auch eher "`behäbiger"' als kleine. (\cite{Vergleichende_Anatomie}, Kapitel 23)
 
 Sehr große und sehr kleine Wirbeltiere können also nicht über einfaches Skalieren ineinander überführt werden. Dennoch ähneln sich ihre Skelette sehr.
 
@@ -127,13 +129,15 @@ Sehr große und sehr kleine Wirbeltiere können also nicht über einfaches Skali
 \section{Mythologie}
 \label{biology_mythology}
 
-Dieser Abschnitt entfernt sich von tatsächlich vorkommenden Wirbeltieren und wirft einen Blick auf fantastische Tiere aus der Mythologie. Die Webseite \cite{vertebrateExtraLimbs} gibt einen guten Überblick über fiktive Wirbeltiere mit zusätzlichen Gliedmaßen. 
+In diesem Abschnitt wird ein kurzer Blick über die Biologie hinaus, auf fantastische Tiere aus der Mythologie geworfen. 
+Ein Algorithmus, der wirbeltierähnliche Skelette erzeugt, bewegt sich ja schon über die Grenzen der Biologie hinaus. Da ist es nur ein kleiner Schritt auch fiktive Wirbeltiere mit zusätzlichen Gliedmaßen zu erzeugen.
+Einen guten Überblick über solche Tiere, nicht nur aus der Mythologie sondern auch aus aktuellerer Literatur, Filmen oder Spielen, gibt die Webseite \cite{vertebrateExtraLimbs}.
 
-Bekannte Beispiele sind unter anderem:
-\begin{itemize}
- \item \textbf{Zentauren} Sie haben einen Pferdekörper, aber statt eines Halses setzt ein menschlicher Oberkörper auf dem Schultergürtel auf. \cite{centaurs}
- 
- \item \textbf{Pegasus} Der Pegasus hat ebenfalls den Körper eines Pferdes, aber auch Flügel, die zusätzlich zu den Vorderbeinen am Schultergürtel ansetzen. \cite{pegasus}
- 
- \item \textbf{Asiatische Drachen} Sie haben einen langen schlangenartigen Körper mit oft mehr als vier Beinen.
-\end{itemize}
+Hier sollen drei Beispiele hervorgehoben werden, die jeweils charakteristische Merkmale besitzen. Sie stammen aus der Mythologie und bilden oft auch die Grundlage für andere fiktive Wirbeltiere.
+
+\emph{Zentauren} haben einen Pferdekörper, aber statt eines Halses setzt ein menschlicher Oberkörper auf dem Schultergürtel auf \cite{centaurs}. Sie haben also zwei Schultergürtel. \todo{Paper zu Mischwesen zitieren?}
+
+Der \emph{Pegasus} hat ebenfalls den Körper eines Pferdes, aber auch Flügel, die zusätzlich zu den Vorderbeinen am Schultergürtel ansetzen \cite{pegasus}. Es ist also "`möglich"' an einem Extremitätengürtel zwei Paare von Extremitäten ansetzen zu lassen.
+
+\emph{Asiatische Drachen} haben einen langen, schlangenartigen Körper mit oft mehr als vier Beinen. Sie können als Inspiration für Tiere dienen, die mehr als nur zwei Extreimtätengürtel entlang des Rückens besitzen.
+
